--- a/new-try/bio.html
+++ b/new-try/bio.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="assets/css/bio.css">
+    <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me</title>
 </head>
 <body>
-    
+    <header>
+        <p class="name"><a href="journey.html"></a>My Journey</p>
+        <p class="bio"> <a href="bio.html" target="_blank">About me</a></p>
+        <div class="social">
+            <a href="https://www.facebook.com/thomas.ginderjuve" target="_blank">
+                <img src="assets/images/facebook-logo.webp" alt="" class="facebook">
+            </a>
+            <a href="https://www.instagram.com/thommy_ghinda/" target="_blank">
+                <img src="assets/images/instagram-logo.webp" alt="" class="insta">
+            </a>
+        </div>
+        <p class="github"><a href="https://github.com/FreeEnd00" target="_blank">My GitHub</a></p>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+        <button class="form-button" popovertarget="contact-form">Contact me!</button>
+        <div class="form-container" popover id="contact-form">
+            <div class="overlay">
+                <form class="contact-form">
+                    <button class="close-form">X</button>
+                    <div class="first-name-container">
+                        <label for="first-name">First Name:</label>
+                        <input type="text" name="first-name" id="first-name" placeholder="Thomas">
+                    </div>
+                    <div class="email-container">
+                        <label for="email">Email:</label>
+                        <input type="email" name="email" id="email" placeholder="thomas.ginder00@gmail.com">
+                    </div>
+                    <div class="phone-number-container">
+                        <label for="phone-number">Phone Number:</label>
+                        <input type="number" name="phone-number" id="phone-number" placeholder="+39 377 174 9747">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
