--- a/new-try/bio.html
+++ b/new-try/bio.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/bio.css">
     <link rel="stylesheet" href="assets/css/index.css">
     <link rel="stylesheet" href="assets/css/header.css">
@@ -11,17 +14,17 @@
 </head>
 <body>
     <header>
-        <p class="name"><a href="journey.html"></a>My Journey</p>
-        <p class="bio"> <a href="bio.html" target="_blank">About me</a></p>
+        <p class="journey"><a href="journey.html">My Journey</a></p>
+        <p class="bio"> <a href="bio.html">About me</a></p>
         <div class="social">
-            <a href="https://www.facebook.com/thomas.ginderjuve" target="_blank">
+            <a href="https://www.facebook.com/thomas.ginderjuve">
                 <img src="assets/images/facebook-logo.webp" alt="" class="facebook">
             </a>
-            <a href="https://www.instagram.com/thommy_ghinda/" target="_blank">
+            <a href="https://www.instagram.com/thommy_ghinda/">
                 <img src="assets/images/instagram-logo.webp" alt="" class="insta">
             </a>
         </div>
-        <p class="github"><a href="https://github.com/FreeEnd00" target="_blank">My GitHub</a></p>
+        <p class="github"><a href="https://github.com/FreeEnd00">My GitHub</a></p>
     </header>
     <main>
 
