fixed body full width and finished index page (added home icon on header)

--- a/new-try/bio.html
+++ b/new-try/bio.html
@@ -14,6 +14,11 @@
 </head>
 <body>
     <header>
+        <div class="home-container">
+            <a href="index.html">
+                <img src="assets/icons/home.svg" alt="home">
+            </a>
+        </div>
         <p class="journey"><a href="journey.html">My Journey</a></p>
         <p class="bio"> <a href="bio.html">About me</a></p>
         <div class="social">
