--- a/new-try/bio.html
+++ b/new-try/bio.html
@@ -20,7 +20,9 @@
             </a>
         </div>
         <p class="journey"><a href="journey.html">My Journey</a></p>
-        <p class="bio"> <a href="bio.html">About me</a></p>
+        <div class="about-me-container">
+            <p class="bio"> <a href="bio.html">About me</a></p>
+        </div>
         <div class="social">
             <a href="https://www.facebook.com/thomas.ginderjuve">
                 <img src="assets/images/facebook-logo.webp" alt="" class="facebook">
@@ -32,7 +34,15 @@
         <p class="github"><a href="https://github.com/FreeEnd00">My GitHub</a></p>
     </header>
     <main>
+        <div class="biography">
+            <div class="my-photo-container">
+                <img class="my-photo" src="assets/images/my-photo.jpg" alt="">
+            </div>
+            <p class="bio-text">
+                Hi, I am Thomas Ernesto Ginder, I am 23 years old and I am from Sardinia, Italy but my last name can trick someone becouse my dad is form Germany.
 
+            </p>
+        </div>
     </main>
     <footer>
         <button class="form-button" popovertarget="contact-form">Contact me!</button>
