continued bio.html

--- a/new-try/bio.html
+++ b/new-try/bio.html
@@ -3,6 +3,9 @@
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/bio.css">
     <link rel="stylesheet" href="assets/css/index.css">
@@ -39,10 +42,30 @@
                 <img class="my-photo" src="assets/images/my-photo.jpg" alt="">
             </div>
             <p class="bio-text">
-                Hi, I am Thomas Ernesto Ginder, I am 23 years old and I am from Sardinia, Italy but my last name can trick someone becouse my dad is form Germany.
-
+                Hi, I am Thomas Ernesto Ginder, I am 23 years old and I am from Sardinia, 
+                Italy but my last name can trick someone becouse my dad is form Germany.
+                My dream is to become a professional software developer and who knows, maybe
+                one day, become a robotic engineer.
+                One of my goals is to improve life on our planet with my programs.
+                I consider myself a very kind person and with a lot of energy for improving me and 
+                my work everyday, a messy but fussy person who love to use logic for create
+                everything that can give me a satisfying output.
+                I prefer a slow but detailed work beaside a fast and common work becouse hurry
+                is never good. 
             </p>
         </div>
+        <div class="like-container">
+            <p class="title">Things I like:</p>
+        </div>
+        <ul>
+            <li>Gaming</li>
+            <li>Electronic&#47;Rap Music</li>
+            <li>Wing Chun</li>
+            <li>Eating</li>
+            <li>Dogs</li>
+            <li>Climate Change</li>
+            <li>Astonomy</li>
+        </ul>
     </main>
     <footer>
         <button class="form-button" popovertarget="contact-form">Contact me!</button>
