--- a/new-try/bio.html
+++ b/new-try/bio.html
@@ -47,7 +47,7 @@
                 My dream is to become a professional software developer and who knows, maybe
                 one day, become a robotic engineer.
                 One of my goals is to improve life on our planet with my programs.
-                I consider myself a very kind person and with a lot of energy for improving me and 
+                I consider myself a very kind person and with a lot of energy for improve me and 
                 my work everyday, a messy but fussy person who love to use logic for create
                 everything that can give me a satisfying output.
                 I prefer a slow but detailed work beaside a fast and common work becouse hurry
@@ -58,14 +58,45 @@
             <p class="title">Things I like:</p>
         </div>
         <ul>
-            <li>Gaming</li>
-            <li>Electronic&#47;Rap Music</li>
-            <li>Wing Chun</li>
-            <li>Eating</li>
-            <li>Dogs</li>
-            <li>Climate Change</li>
-            <li>Astonomy</li>
+            <li><img src="assets/icons/game-controller.png" alt="">Gaming <img src="assets/icons/heart.png" alt=""><img src="assets/icons/minecraft.png" alt=""></li>
+            <li><img src="assets/icons/chess.png" alt="">Board Games <img src="assets/icons/dice.png" alt=""><img src="assets/icons/monopoly.png" alt=""></li>
+            <li><img src="assets/icons/electronic.png" alt="">Music <img src="assets/icons/headphones.png" alt=""><img src="assets/icons/echo.png" alt=""></li>
+            <li><img src="assets/icons/wing-chun.png" alt="">Wing Chun <img src="assets/icons/tan.png" alt=""> <img src="assets/icons/gloves.png" alt=""></li>
+            <li><img src="assets/icons/pizza.png" alt="">Eating <img src="assets/icons/cookie.png" alt=""><img src="assets/icons/egg.png" alt=""></li>
+            <li><img src="assets/icons/dog.png" alt="">Dogs <img src="assets/icons/collar.png" alt=""><img src="assets/icons/puppy.png" alt=""></li>
+            <li><img src="assets/icons/planet.png" alt="">Climate <img src="assets/icons/volunteering.png" alt=""><img src="assets/icons/co2.png" alt=""></li>
+            <li><img src="assets/icons/telescope.png" alt="">Astonomy <img src="assets/icons/moon.png" alt=""><img src="assets/icons/galaxy.png" alt=""></li>
         </ul>
+        <div class="mentions">
+            <p class="mentions-title">
+                All Mentions:
+            </p>
+            <div class="icons8">
+                <a target="_blank" href="https://icons8.com/icon/5DANichneoqj/game-controller">Game Controller</a>
+                <a target="_blank" href="https://icons8.com/icon/upd5xh7hPe0R/pixel-heart">Pixel Heart</a>
+                <a target="_blank" href="https://icons8.com/icon/PQ7bo28SyNO6/minecraft-pickaxe">Minecraft Pickaxe</a>
+                <a target="_blank" href="https://icons8.com/icon/10288/king">King</a>
+                <a target="_blank" href="https://icons8.com/icon/_j_F9jG67IQ1/dice">Dice</a>
+                <a target="_blank" href="https://icons8.com/icon/0ODFcG2FuEpD/monopoly">Monopoly</a>
+                <a target="_blank" href="https://icons8.com/icon/12100/electronic-music">Electronic Music</a>
+                <a target="_blank" href="https://icons8.com/icon/20747/headphones">Headphones</a>
+                <a target="_blank" href="https://icons8.com/icon/cScXmVslQeHF/amazon-echo">Amazon Echo</a>
+                <a target="_blank" href="https://icons8.com/icon/9QnuAvsVxtMs/mma-fighter-glove">MMA Fighter Glove</a>
+                <a target="_blank" href="https://icons8.com/icon/oTyopyeAHiFU/salami-pizza">Salami Pizza</a>
+                <a target="_blank" href="https://icons8.com/icon/107442/cookie">Cookie</a>
+                <a target="_blank" href="https://icons8.com/icon/BeDidZchwnxG/fry">Fry</a>
+                <a target="_blank" href="https://icons8.com/icon/TO7tQS2Frpif/siba-inu-kawaii">Siba Inu Kawaii</a>
+                <a target="_blank" href="https://icons8.com/icon/77235/dog-collar">Dog Collar</a>
+                <a target="_blank" href="https://icons8.com/icon/IZ93evILA9l5/puppy">Puppy</a>
+                <a target="_blank" href="https://icons8.com/icon/w7B57EZzIV9I/planet">Planet</a>
+                <a target="_blank" href="https://icons8.com/icon/16007/volunteering">Volunteering</a>
+                <a target="_blank" href="https://icons8.com/icon/k41MIBjzAlR7/co2-reduction">Co2 Reduction</a>
+                <a target="_blank" href="https://icons8.com/icon/iuHJFo6arekf/telescope">Telescope</a>
+                <a target="_blank" href="https://icons8.com/icon/62034/moon">Moon</a>
+                <a target="_blank" href="https://icons8.com/icon/a2MFXoTTlsWP/nebula">Galaxy</a> icons by <a target="_blank" href="https://icons8.com">Icons8</a>
+            </div>    
+            <a href="https://www.flaticon.com/free-icons/wing-chun" title="wing chun icons">Wing chun icons created by Eucalyp - Flaticon</a>
+            <a href="https://www.flaticon.com/free-icons/wing-chun" title="wing chun icons">Wing chun icons created by Freepik - Flaticon</a>        </div>
     </main>
     <footer>
         <button class="form-button" popovertarget="contact-form">Contact me!</button>
