--- a/new-try/bio.html
+++ b/new-try/bio.html
@@ -27,14 +27,14 @@
             <p class="bio"> <a href="bio.html">About me</a></p>
         </div>
         <div class="social">
-            <a href="https://www.facebook.com/thomas.ginderjuve">
+            <a href="https://www.facebook.com/thomas.ginderjuve" target="_blank">
                 <img src="assets/images/facebook-logo.webp" alt="" class="facebook">
             </a>
-            <a href="https://www.instagram.com/thommy_ghinda/">
+            <a href="https://www.instagram.com/thommy_ghinda/" target="_blank">
                 <img src="assets/images/instagram-logo.webp" alt="" class="insta">
             </a>
         </div>
-        <p class="github"><a href="https://github.com/FreeEnd00">My GitHub</a></p>
+        <p class="github"><a href="https://github.com/FreeEnd00" target="_blank">My GitHub</a></p>
     </header>
     <main>
         <div class="biography">
@@ -66,13 +66,7 @@
                 <li class="climate"><img src="assets/icons/planet.png" alt="">Environment <img src="assets/icons/volunteering.png" alt=""><img src="assets/icons/co2.png" alt=""></li>
                 <li class="astronomy"><img src="assets/icons/telescope.png" alt="">Astonomy <img src="assets/icons/moon.png" alt=""><img src="assets/icons/galaxy.png" alt=""></li>
             </div>
-
         </ul>
-        <div class="mentionsss">
-            <p class="mentions-title">
-                All Mentions:
-            </p>
-           
     </main>
     <footer>
         <button class="form-button" popovertarget="contact-form">Contact me!</button>
