texts biography fix

--- a/new-try/bio.html
+++ b/new-try/bio.html
@@ -42,16 +42,13 @@
                 <img class="my-photo" src="assets/images/my-photo.jpg" alt="">
             </div>
             <p class="bio-text">
-                Hi, I am Thomas Ernesto Ginder, I am 23 years old and I am from Sardinia, 
-                Italy but my last name can trick someone becouse my dad is form Germany.
-                My dream is to become a professional software developer and who knows, maybe
-                one day, become a robotic engineer.
-                One of my goals is to improve life on our planet with my programs.
-                I consider myself a very kind person and with a lot of energy for improve me and 
-                my work everyday, a messy but fussy person who love to use logic for create
-                everything that can give me a satisfying output.
-                I prefer a slow but detailed work beaside a fast and common work becouse hurry
-                is never good. 
+                Hi, I am Thomas Ernesto Ginder, I am 23 years old, and I am from Sardinia, Italy my last name 
+                can trick someone because my dad is from Germany. My dream is to become a professional software
+                developer and who knows, maybe one day, become a robotic engineer. One of my goals is to
+                improve life on our planet with my programs. I consider myself a very kind person with a
+                lot of energy to improve myself and my work every day, a messy but fussy person who loves
+                to use logic to create everything that can give me a satisfying output. I prefer slow but
+                detailed work beside fast and trivial work because a hurry is never good.
             </p>
         </div> 
         <p class="title">Things I like:</p>
